<resources>
    <string name="app_name">My Home</string>
    <string name="title_regles">Rules</string>
    <string name="title_maison">Home</string>
    <string name="title_routines">Routines</string>
    <string name="create">create</string>
    <string name="options">options</string>
    <string name="rules">rules</string>
    <string name="title_activity_preferences">PreferencesActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="add_device">Add Device</string>
    <string name="preferences">Preferences</string>
    <string name="windows">windows</string>
    <string name="temperature">Temperature</string>
    <string name="light">Light</string>
    <string name="expand_card">Expand card</string>
    <string name="configure_your_home">Configure your home</string>
    <string name="_0">0</string>
    <string name="rooms">Rooms</string>
    <string name="devices">Devices</string>
    <string name="search_for_a_device">Search for a device</string>
    <string name="add">Add</string>
    <string name="recognizing_device">Recognizing device</string>
    <string name="setting_up_device">Setting up device</string>
</resources>