<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="salaroli.com.mamaison.ui.regles.ReglesFragment"
        android:label="@string/title_regles"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="salaroli.com.mamaison.ui.maison.MaisonFragment"
        android:label="@string/title_maison"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="salaroli.com.mamaison.ui.routines.RoutinesFragment"
        android:label="@string/title_routines"
        tools:layout="@layout/fragment_notifications" />
</navigation>