<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.maison.HomeFragment"
    android:paddingBottom="?actionBarSize">

    <ImageButton
        android:id="@+id/add_home"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_add_circle_outline_24"
        android:tint="@color/black"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/add_device"/>
    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/preferences_home"
        app:layout_constraintLeft_toRightOf="@+id/add_home"
        android:textSize="32sp"
        android:textColor="@color/secondaryTextColor"
        android:textStyle="bold"
        android:text="My Home"/>

    <ImageButton
        android:id="@+id/preferences_home"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_settings_24"
        android:tint="@color/black"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/preferences"/>

    <salaroli.com.expandablecardview.RecyclerView.RecyclerViewRoom
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_home"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fab_temperature"
        app:srcCompat="@drawable/ic_window"
        android:visibility="invisible"
        android:contentDescription="@string/windows"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fab_lamp"
        app:srcCompat="@drawable/ic_temperature"
        android:visibility="invisible"
        android:contentDescription="@string/temperature"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_lamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fab_home"
        app:srcCompat="@drawable/ic_lamp"
        android:visibility="invisible"
        android:contentDescription="@string/light"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_baseline_api_24"
        android:contentDescription="@string/options"/>
</androidx.constraintlayout.widget.ConstraintLayout>